fdo#52392 dbase: correctly NULL out non-filled in fields in inserted rows

Change-Id: Id2e8ad5b6bed1c184de6dccf7fa43254099fb958